Change the customised question text to title in the form partial

--- a/app/views/surveys/_customised_question_fields.html.erb
+++ b/app/views/surveys/_customised_question_fields.html.erb
@@ -9,7 +9,7 @@
   -->
   <div class="field">
     <p>
-      <%= f.label :text %>
+      <%= f.label "Title" %>
       <%= f.text_field :text %>
     </p>
   </div>
