Add list of countries select box to location of organisation question

--- a/app/views/surveys/_organisational_fields.html.erb
+++ b/app/views/surveys/_organisational_fields.html.erb
@@ -47,7 +47,7 @@
     <p>
       Lorem ipsum.
     </p>
-    <%#= form.collection_radio_buttons '[settings][participant_specialism]', surveys_data("participant_specialism"), :first, :last %>
+    <%= form.select '[settings][location_of_organisation]', surveys_data("location_of_organisation") %>
   </div>
 
   <div class="field">
