--- a/app/views/surveys/_organisational_fields.html.erb
+++ b/app/views/surveys/_organisational_fields.html.erb
@@ -93,7 +93,7 @@
     <label for="">
       Size of organisation
     </label>
-    <%= form.text_field '[settings][size_of_group]' %>
+    <%= form.text_field '[settings][size_of_organisation]' %>
     <p>
       Lorem ipsum
     </p>
@@ -186,15 +186,41 @@
   </p>
 
   <p>
-    Participants' level of study: <%= survey.settings["participant_level_of_study"] %>
+    Type of organisation: <%= survey.settings["type_of_organisation"] %>
+  </p>
+
+  <% if survey.settings["type_of_organisation"] == "other" %>
+    <p>
+      Details for other organisation: <%= survey.settings["org_type_other"] %>
+    </p>
+  <% end %>
+
+  <p>
+    Location of organisation: <%= survey.settings["location_of_organisation"] %>
   </p>
 
   <p>
-    Participants' specialism: <%= survey.settings["participant_specialism"] %>
+    Is organisation part of a wider network of organisations?: <%= survey.settings["wider_network"] %>
   </p>
 
   <p>
-    Name of Course/module: <%= survey.settings["name_of_course"] %>
+    Wider network of organisations details: <%= survey.settings["wider_network_details"] %>
+  </p>
+
+  <p>
+    What kind of conservation activities does the organisation do?:
+    <ul>
+    <% kinds = survey.settings["kind_of_conservation_activities"].map{|k| surveys_data("kind_of_conservation_activities")[k.to_sym]}.compact! %>
+    <% kinds.each do |kind| %>
+      <li>
+        <%= kind %>
+      </li>
+    <% end %>
+    </ul>
+  </p>
+
+  <p>
+    Date established: <%= survey.settings["date_established"].map{|k,v| v}.join("-").to_date %>
   </p>
 
   <p>
@@ -202,7 +228,30 @@
   </p>
 
   <p>
-    Size of group: <%= survey.settings["size_of_group"] %>
+    Size of organisation: <%= survey.settings["size_of_organisation"] %>
+  </p>
+
+  <p>
+    Sub group explanation: <%= survey.settings["sub_group_explanation"] %>
+  </p>
+
+  <p>
+    Organisation funding sources:
+    <% sources = survey.settings["organisation_funding_sources"].map{|k| surveys_data("organisation_funding_sources")[k.to_sym]}.compact! %>
+    <ul>
+    <% sources.each do |source| %>
+      <li>
+        <%= source %>
+      </li>
+    <% end %>
+    </ul>
+  </p>
+  <p>
+    Organisation funding sources other: <%= survey.settings["organisation_funding_sources_other"] %>
+  </p>
+
+  <p>
+    Geographical scope: <%= survey.settings["geographical_scope"] %>
   </p>
 
   <p>
@@ -210,7 +259,7 @@
   </p>
 
   <p>
-    Anonymity: <%= survey.settings["anonymity"] %>
+    Session date: <%= survey.settings["session_date"].map{|k,v| v}.join("-").to_date %>
   </p>
 
   <p>
