Initial changes to the index home page as requested

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -3,10 +3,9 @@
 <header class="hero--public flex flex-v-center">
   <div class="hero__content container--public center">
     <h1>Inform debates on the future of conservation</h1>
-    <p class="hero__tagline">Explore the views of conservationists on a range of issues, see how you compare in the movement globally and contribute your views to shape future debates on conservation</p>
+    <p class="hero__tagline">Give your views on conservation on a range of issues, see how you compare to others and contribute your views to shape future debates.</p>
 
     <div>
-      <%= link_to 'About', '', class: 'button--white hero__button' %>
       <%= link_to 'Take the survey', new_survey_response_path(Survey.master_survey), class: 'button--blue-shadow hero__button' %>
     </div>
   </div>
