Updated with new text and changed master survey name

--- a/app/views/global_public/_cta.html.erb
+++ b/app/views/global_public/_cta.html.erb
@@ -1,7 +1,7 @@
 <div class="cta--next-steps flex flex-v-center">
   <div class="container--public-small">
-    <h3>Next Steps</h3>
-    <p>We plan to use the data to establish whether there are any factors (such as nationality, educational background, or experience of different ecosystems) that explain some of the variation in the views held by conservationists.</p>
+    <h3>Research and publications</h3>
+    <p>Data from the Future of Conservation survey have been used to identify the values held by conservationists, and how these relate to their backgrounds (such as nationality, educational background, or experience of different ecosystems) *Link(s) to our publications.* We continue to carry out new analyses using data collected through this website, and aim to continue disseminating our findings amongst the conservation community.</p>
     <%= link_to 'Take the survey', new_survey_response_path(Survey.master_survey), title: 'Take the survey', class: 'button--blue-shadow' %>
   </div>
 </div>
