Changes to the about go fox page

--- a/app/views/static_pages/about_go_fox.html.erb
+++ b/app/views/static_pages/about_go_fox.html.erb
@@ -6,7 +6,7 @@
 
   <div class="nav--side flex-vs-stretch flex-1-fith content-padding--public">
     <ul class="nav__ul ul-unstyled">
-      <% t('about_project').each do |item| %>
+      <% t('about_go_fox').each do |item| %>
         <li class="nav__li flex flex-v-center flex-h-between">
           <span><%= item[:link] %></span>
           <i class="material-icons nav__icon">chevron_right</i>
@@ -16,7 +16,7 @@
   </div>
 
   <div class="flex-4-fiths gutters content-padding--public">
-    <% t('about_project').each do |item| %>
+    <% t('about_go_fox').each do |item| %>
       <div class="block--about">
         <h2><%= item[:title] %></h2>
 
