Add login link to footer when not logged in

--- a/app/views/global_public/_footer.html.erb
+++ b/app/views/global_public/_footer.html.erb
@@ -7,19 +7,12 @@
         <li class="nav__li"><%= link_to 'About the Debate', about_the_debate_path, title: 'About the Debate', class: 'nav__a' %></li>
         <li class="nav__li"><%= link_to 'About the Project', about_the_project_path, title: 'About the Project', class: 'nav__a' %></li>
         <li class="nav__li"><%= link_to 'Legal', legal_path, title: 'Legal', class: 'nav__a' %></li>
+        <% unless user_signed_in? %>
+          <li class="nav__li"><%= link_to 'Log in', new_user_session_path, title: 'Log in', class: 'nav__a' %></li>
+        <% end %>
       </ul>
 
       <%= link_to '', root_path, title: 'Future of Conservation', class: 'logo--foc-white' %>
-
-      <div class="footer__login">
-        <span>(Log in for GoFox)</span>
-
-        <% if user_signed_in? %>
-          <%= link_to "Log out", destroy_user_session_path, method: :delete, class: 'button--log-in' %>
-        <% else %>
-          <%= link_to 'Log in', new_user_session_path, title: 'Log in', class: 'button--log-in' %>
-        <% end %>
-      </div>
     </div>
 
     <p class="footer__copyright no-margin">&copy; Copyright <%= Date.today.year %> GoFox</p>
