--- a/app/assets/stylesheets/utilities/_variables.scss
+++ b/app/assets/stylesheets/utilities/_variables.scss
@@ -57,7 +57,7 @@ $body-line-height: 1.4;
 //--------------------------------------------------
 // dimensions
 //--------------------------------------------------
-$site-width: rem-calc(1332);
+$site-width: 1332;
 
 $content-small: rem-calc(380);
 
@@ -67,8 +67,9 @@ $topbar-large: rem-calc(100);
 //--------------------------------------------------
 // breakpoints
 //--------------------------------------------------
-$small: 720px;
-$medium: 960px;
+//must be in px!
+$small: 720;
+$medium: 960;
 $large: $site-width;
 
 //--------------------------------------------------
