--- a/app/views/responses/new.html.erb
+++ b/app/views/responses/new.html.erb
@@ -1,4 +1,5 @@
 <%= render partial: 'global_public/header', locals: { title: @survey.name } %>
+<%= render 'global/survey_warning' %>
 
 <div class="container--public content-padding">
 
