--- a/app/assets/stylesheets/utilities/_helpers.scss
+++ b/app/assets/stylesheets/utilities/_helpers.scss
@@ -8,6 +8,7 @@
 // - positioning
 // - margin & padding
 // - boxes
+// - backgrounds
 //
 //--------------------------------------------------
 // fouc (flash of unstyled content)
@@ -48,7 +49,34 @@
 .right { text-align: right; }
 .left { text-align: left; }
 
+.item-center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+
+  transform: translate(-50%, -50%);
+
+  &--fixed {
+    position: fixed;
+  }
+}
+
 //--------------------------------------------------
 // margin & padding
 //--------------------------------------------------
 .no-margin { margin: 0; }
+
+//--------------------------------------------------
+// backgrounds
+//--------------------------------------------------
+.page-overlay {
+  background-color: rgba($white, 0.8);
+
+  position: fixed;
+  top:0;
+  left: 0;
+  bottom:0;
+  right: 0;
+  
+  z-index: 1;
+}
