--- a/app/assets/stylesheets/components/form/_radio-button.scss
+++ b/app/assets/stylesheets/components/form/_radio-button.scss
@@ -86,3 +86,19 @@
 
   &__label { @extend %label; }
 }
+
+//--------------------------------------------------
+// radio button collection
+//--------------------------------------------------
+.rb-collection {
+  &__option {
+    width: 50%;
+    padding: rem-calc(6 20 6 0);
+
+    label {
+      margin: rem-calc(0 0 0 10);
+      font-weight: 500;
+      text-transform: capitalize;
+    }
+  }
+}
