quick fix for disabling (specify) select

--- a/app/assets/stylesheets/components/form/_validation.scss
+++ b/app/assets/stylesheets/components/form/_validation.scss
@@ -33,3 +33,20 @@
     }
   }
 }
+
+.disabler {
+  position: relative;
+
+  &--active {
+    opacity: 0.5;
+
+    &::after {
+      content: '';
+      position: absolute;
+      top:0;
+      bottom:0;
+      left:0;
+      right:0;
+    }
+  }
+}
