--- a/app/views/static_pages/legal.html.erb
+++ b/app/views/static_pages/legal.html.erb
@@ -1,37 +1,1 @@
-<%= render 'global_public/nav_primary' %>
-
-<%= render partial: 'global_public/header', locals: { title: 'Legal' } %>
-
-<div class="container--public flex">
-
-  <div class="nav--side flex-vs-stretch flex-1-fith content-padding--public">
-    <ul class="nav__ul ul-unstyled">
-      <% t('about_project').each do |item| %>
-        <li class="nav__li flex flex-v-center flex-h-between">
-          <span><%= item[:link] %></span>
-          <i class="material-icons nav__icon">chevron_right</i>
-        </li>
-      <% end %>
-    </ul>
-  </div>
-
-  <div class="flex-4-fiths gutters content-padding--public">
-    <% t('about_project').each do |item| %>
-      <div class="block--about">
-        <h2><%= item[:title] %></h2>
-
-        <% if item[:content] %>
-          <div><%= item[:content].html_safe %></div>
-        <% end %>
-
-        <% if item[:accordion] %>
-          <%= render partial: 'global_public/accordion', locals: { accordion: item[:accordion] } %>
-        <% end %>
-
-      </div>
-    <% end %>
-  </div>
-
-</div>
-
-<%= render 'global_public/cta' %>
+<%= render partial: 'static_page', locals: { title: 'Legal', page: 'about_project' } %>
