--- a/app/assets/stylesheets/components/_nav.scss
+++ b/app/assets/stylesheets/components/_nav.scss
@@ -65,7 +65,7 @@
       &__dropdown-toggle {
         border-bottom: solid $grey 1px;
         cursor: pointer;
-        color: $grey;
+        color: $blue-dark;
         font-weight: bold;
         padding-top: rem-calc(20);
         padding-bottom: rem-calc(20);
