--- a/app/views/surveys/_organisational_fields.html.erb
+++ b/app/views/surveys/_organisational_fields.html.erb
@@ -10,13 +10,13 @@
   </div>
 
   <div class="field">
-    <label for="">
-      Default language
-    </label>
-    <p>
-      Lorem ipsum.
-    </p>
-    <%= form.collection_radio_buttons '[settings][default_language]', surveys_data("default_language"), :first, :last %>
+    <%= render partial: 'form_elements/collection_buttons',
+      locals: {
+        form: form,
+        type: "radio",
+        title: "Default language",
+        rb_config: ['[settings][default_language]', surveys_data("default_language"), :first, :last] 
+      } %>
   </div>
 
   <div class="field">
@@ -30,13 +30,13 @@
   </div>
 
   <div class="field">
-    <label for="">
-      1. Type of organisation.
-    </label>
-    <p>
-      Lorem ipsum
-    </p>
-    <%= form.collection_radio_buttons '[settings][type_of_organisation]', surveys_data("type_of_organisation"), :first, :last %>
+    <%= render partial: 'form_elements/collection_buttons',
+    locals: { 
+      form: form,
+      type: "radio",
+      title: "1. Type of organisation.",
+      rb_config: ['[settings][type_of_organisation]', surveys_data("type_of_organisation"), :first, :last] 
+    } %>
     <%= form.text_field '[settings][org_type_other]' %>
   </div>
 
@@ -51,24 +51,24 @@
   </div>
 
   <div class="field">
-    <label for="">
-      3. Is organisation part of a wider network of organisations?
-    </label>
-    <p>
-      Lorem ipsum
-    </p>
-    <%= form.collection_radio_buttons '[settings][wider_network]', surveys_data("wider_network"), :first, :last %>
+    <%= render partial: 'form_elements/collection_buttons',
+        locals: { 
+        form: form,
+        type: "radio",
+        title: "3. Is organisation part of a wider network of organisations?",
+        rb_config: ['[settings][wider_network]', surveys_data("wider_network"), :first, :last] 
+      } %>
     <%= form.text_area '[settings][wider_network_details]' %>
   </div>
 
   <div class="field">
-    <label for="">
-      4. What kind of conservation activities does the organisation do?
-    </label>
-    <%= form.collection_check_boxes '[settings][kind_of_conservation_activities]', surveys_data("kind_of_conservation_activities"), :first, :last %>
-    <p>
-      Lorem ipsum
-    </p>
+    <%= render partial: 'form_elements/collection_buttons',
+        locals: { 
+        form: form,
+        type: 'check_box',
+        title: "4. What kind of conservation activities does the organisation do?",
+        rb_config: ['[settings][kind_of_conservation_activities]', surveys_data("kind_of_conservation_activities"), :first, :last]
+      } %>
   </div>
 
   <div class="field">
@@ -116,35 +116,34 @@
   </div>
 
   <div class="field">
-    <label for="">
-      8. Organisation funding sources
-    </label>
-    <p>
-      Lorem ipsum
-    </p>
-    <%= form.collection_check_boxes '[settings][organisation_funding_sources]', surveys_data("organisation_funding_sources"), :first, :last %>
+  <%= render partial: 'form_elements/collection_buttons',
+      locals: { 
+      form: form,
+      type: 'check_box',
+      title: "8. Organisation funding sources",
+      rb_config: ['[settings][organisation_funding_sources]', surveys_data("organisation_funding_sources"), :first, :last]
+    } %>
     <%= form.text_area '[settings][organisation_funding_sources_other]' %>
   </div>
 
   <div class="field">
-    <label for="">
-      9. Geographical scope
-    </label>
-    <p>
-      Lorem ipsum
-    </p>
-    <%= form.collection_radio_buttons '[settings][geographical_scope]', surveys_data("geographical_scope"), :first, :last %>
+    <%= render partial: 'form_elements/collection_buttons',
+      locals: { 
+      form: form,
+      type: "radio",
+      title: "9. Geographical scope",
+      rb_config: ['[settings][geographical_scope]', surveys_data("geographical_scope"), :first, :last]
+    } %>
   </div>
 
   <div class="field">
-    <label for="">
-      Follow up session?
-    </label>
-    (Radio buttons: yes/no)
-    <p>
-      Lorem ipsum
-    </p>
-    <%= form.collection_radio_buttons '[settings][follow_up_session]', surveys_data("follow_up_session"), :first, :last %>
+  <%= render partial: 'form_elements/collection_buttons',
+      locals: { 
+      form: form,
+      type: "radio",
+      title: "Follow up session?",
+      rb_config: ['[settings][follow_up_session]', surveys_data("follow_up_session"), :first, :last]
+    } %>
   </div>
 
 
