initial dummy icons

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,6 +24,7 @@
 @import './utilities/flexbox.scss';
 @import './utilities/base.scss';
 @import './utilities/helpers.scss';
+@import './utilities/icons.scss';
 
 // components
 @import './components/form/form.scss';
