temp fix for side nav going over footer

--- a/app/assets/stylesheets/components/_cta.scss
+++ b/app/assets/stylesheets/components/_cta.scss
@@ -13,6 +13,7 @@
     text-align: center;
     height: rem-calc( 350);
 
+    @include breakpoint($small) { position: relative; }
     @include breakpoint($medium) { height: rem-calc(450); }
 
     h3 {
