--- a/app/views/form_elements/_collection_buttons.html.erb
+++ b/app/views/form_elements/_collection_buttons.html.erb
@@ -5,11 +5,14 @@
 <div class="b-collection flex flex-wrap">
   <% if type == 'radio' %>
     <%= form.collection_radio_buttons(*rb_config) do |b| %>
-      <span class="b-collection__option flex"><%= b.radio_button + b.label %></span>
+      <span class="b-collection__option <%= b_collection_option_class(option_class ||= '') %> flex">
+      <%= b.radio_button + b.label %></span>
     <% end %>
   <% else %>
     <%= form.collection_check_boxes(*rb_config) do |b| %>
-      <span class="b-collection__option flex"><%= b.check_box + b.label %></span>
+      <span 
+        class="b-collection__option <%= b_collection_option_class(option_class ||= '') %> flex">
+        <%= b.check_box + b.label %></span>
     <% end %>
   <% end %>
 </div>
