--- a/app/assets/stylesheets/utilities/_icons.scss
+++ b/app/assets/stylesheets/utilities/_icons.scss
@@ -17,20 +17,9 @@ $icon-width: rem-calc(60);
     &:hover { opacity: .75; }
   }
 
-  &--facebook {
-    background-color: blue;
-    content: '';
-  }
-
-  &--twitter {
-    background-color: lightblue;
-    content: '';
-  }
-
-  &--mail {
-    background: grey;
-    content: '';
-  }
+  &--facebook { content: image-url('icons/social/icon-facebook.svg'); }
+  &--mail { content: image-url('icons/social/icon-mail.svg'); }
+  &--twitter { content: image-url('icons/social/icon-twitter.svg'); }
 }
 
 .icons {
@@ -39,9 +28,7 @@ $icon-width: rem-calc(60);
 
     display: inline-block;
 
-    @include breakpoint($small) {
-      width: auto;
-    }
+    @include breakpoint($small) { width: auto; }
   }
   
   &__header {
