--- a/app/assets/stylesheets/components/form/_validation.scss
+++ b/app/assets/stylesheets/components/form/_validation.scss
@@ -34,19 +34,6 @@
   }
 }
 
-.disabler {
-  position: relative;
-
-  &--active {
-    opacity: 0.5;
-
-    &::after {
-      content: '';
-      position: absolute;
-      top:0;
-      bottom:0;
-      left:0;
-      right:0;
-    }
-  }
+.disabler--active {
+  display: none;
 }
