add sharing icons to results page and update styling

--- a/app/assets/stylesheets/components/_box.scss
+++ b/app/assets/stylesheets/components/_box.scss
@@ -30,6 +30,8 @@
 
   &-margin-left { margin-left: rem-calc(36); }
 
+  &-margin-bottom { margin-bottom: rem-calc(20); }
+
   &-padding { padding: rem-calc(22 20); }
 
   &__header--beige { background-color: $beige; }
