--- a/app/views/global_public/_sharing_icons.html.erb
+++ b/app/views/global_public/_sharing_icons.html.erb
@@ -1,6 +1,6 @@
 <div class="icons--social">
-    <div class="icons__header">Share</div>
-  <div class="icons__wrapper flex-inline">
+  <div class="icons__header">Share the survey</div>
+  <div class="icons__wrapper flex-inline flex-h-between">
     <%= create_social_link('Facebook') %>
     <%= create_social_link('Twitter') %>
     <%= mail_to "", '', class: 'icon--social icon--mail' %>
