fix scroll inconsistency

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -28,6 +28,8 @@
     @extend %footer;
     color: $blue-xlight;
 
+    position: relative;
+
     .footer {
       &__content {
         flex-wrap: wrap;
