--- a/app/assets/stylesheets/components/_nav.scss
+++ b/app/assets/stylesheets/components/_nav.scss
@@ -41,77 +41,82 @@
 //--------------------------------------------------
 // public
 //--------------------------------------------------
-  &--side {
-    background-color: $purple-light;
-    width: 100%;
-    
-    // position: sticky;
-    // top: 0;
-    flex-shrink: 0;
-
-    @include breakpoint($small) {
-      @include content-padding--public;
-      @include gutters('left', 'margin');
-
-      width: rem-calc(250);
-      align-self: stretch;
-
-      // position: static;
-    }
-
-    .material-icons { color: $grey; }
-
-    .nav {
-      &__dropdown-toggle {
-        border-bottom: solid $grey 1px;
-        cursor: pointer;
-        color: $blue-dark;
-        font-weight: bold;
-        padding-top: rem-calc(20);
-        padding-bottom: rem-calc(20);
-
-        position: relative;
-
-        @include breakpoint($small) { display: none; }
-      }
-
-      &__ul {
-        background-color: $purple-light;
-        padding: rem-calc(0 16);
-        width: 100%;
-
-        @include breakpoint($small) {
-          padding: rem-calc(16);
-          width: rem-calc(250);
-
-          // position: sticky;
-          // top: rem-calc(30);
-        }
-
-      }
-
-        &__li {
-          border-bottom: solid $grey 1px;
-          padding: rem-calc(0 0 0 10);
-          width: 100%; height: rem-calc(40);
-
-          &:last-child {
-            border-width: 0;
-
-            @include breakpoint($small) {border-width: 1px}
-          }
-
-          &:hover {
-            background-color: $grey-light;
-            cursor: pointer;
-          }
-        }
-
-          &__link {
-            color: $blue-xdark;
-          }
-    }
+  &__wrapper {
+    height: rem-calc(65);
+    @include breakpoint($small) { height: auto; }
   }
+
+    &--side {
+      background-color: $purple-light;
+      width: 100%;
+      
+      // position: sticky;
+      // top: 0;
+      flex-shrink: 0;
+
+      @include breakpoint($small) {
+        @include content-padding--public;
+        @include gutters('left', 'margin');
+
+        width: rem-calc(250); height: 100%;
+        align-self: stretch;
+
+        // position: static;
+      }
+
+      .material-icons { color: $grey; }
+
+      .nav {
+        &__dropdown-toggle {
+          border-bottom: solid $grey 1px;
+          cursor: pointer;
+          color: $blue-dark;
+          font-weight: bold;
+          padding-top: rem-calc(20);
+          padding-bottom: rem-calc(20);
+
+          @include breakpoint($small) { display: none; }
+        }
+
+        &__ul {
+          background-color: $purple-light;
+          padding: rem-calc(0 16);
+          width: 100%;
+
+          position: absolute;
+
+          @include breakpoint($small) {
+            padding: rem-calc(16);
+            width: rem-calc(250);
+
+            // position: sticky;
+            // top: rem-calc(30);
+          }
+
+        }
+
+          &__li {
+            border-bottom: solid $grey 1px;
+            padding: rem-calc(0 0 0 10);
+            width: 100%; height: rem-calc(40);
+
+            &:last-child {
+              border-width: 0;
+
+              @include breakpoint($small) {border-width: 1px}
+            }
+
+            &:hover {
+              background-color: $grey-light;
+              cursor: pointer;
+            }
+          }
+
+            &__link {
+              color: $blue-xdark;
+            }
+      }
+    }
 
   &--footer {
     border-top: solid $grey 1px;
