--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -3,6 +3,7 @@
   <head>
     <title>The Future of Conservation</title>
     <%= csrf_meta_tags %>
+    <meta content='width=device-width,initial-scale=1.0' name='viewport'>
 
     <link href="https://fonts.googleapis.com/css?family=Quattrocento+Sans:400,400i,700" rel="stylesheet">
     <%= stylesheet_link_tag 'application', media: 'all' %>
