Add placeholder text for customised questions on new survey form

--- a/app/views/surveys/_form.html.erb
+++ b/app/views/surveys/_form.html.erb
@@ -64,6 +64,9 @@
       <% end %>
 
       <h4>Customised Questions</h4>
+      <p>
+        A maximum of two customised questions can be added and up to ten options per customised question.
+      </p>
       <hr>
 
       <div class="customised_questions">
