add page padding to survey actions

--- a/app/views/surveys/edit.html.erb
+++ b/app/views/surveys/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing Survey</h1>
+<div class="container--small content-padding">
+  <h1>Editing Survey</h1>
 
-<%= render 'form', survey: @survey %>
+  <%= render 'form', survey: @survey %>
 
-<%= link_to 'Show', @survey %> |
-<%= link_to 'Back', surveys_path %>
+  <%= link_to 'Show', @survey %> |
+  <%= link_to 'Back', surveys_path %>
+</div>
