--- a/app/views/surveys/new.html.erb
+++ b/app/views/surveys/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Survey</h1>
+<div class="container--small content-padding">
+  <h1>New Survey</h1>
 
-<%= render 'form', survey: @survey %>
+  <%= render 'form', survey: @survey %>
 
-<%= link_to 'Back', surveys_path %>
+  <%= link_to 'Back', surveys_path %>
+</div>
