--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -1,30 +1,32 @@
-<h1><%= @survey.name %></h1>
+<div class="container--small content-padding">
+  <h1><%= @survey.name %></h1>
 
-<p>
-  <strong>Description:</strong>
-  <%= @survey.description %>
-</p>
+  <p>
+    <strong>Description:</strong>
+    <%= @survey.description %>
+  </p>
 
-<p>
-  <strong>Published:</strong>
-  <%= @survey.published %>
-</p>
+  <p>
+    <strong>Published:</strong>
+    <%= @survey.published %>
+  </p>
 
-<p>
-  <strong>Locked:</strong>
-  <%= @survey.locked %>
-</p>
+  <p>
+    <strong>Locked:</strong>
+    <%= @survey.locked %>
+  </p>
 
-<p>
-  <strong>User:</strong>
-  <%= @survey.user.email %> (<%= @survey.user.organisation_name %>)
-</p>
+  <p>
+    <strong>User:</strong>
+    <%= @survey.user.email %> (<%= @survey.user.organisation_name %>)
+  </p>
 
-<%= link_to "Take the survey", new_survey_response_path(@survey), class: 'button' %>
-<%= link_to 'Edit', edit_survey_path(@survey), class: 'button' %>
-<%= link_to 'Back', surveys_path, class: 'button' %>
-<%= render partial: "surveys/export_form", locals: { survey: @survey } %>
+  <%= link_to "Take the survey", new_survey_response_path(@survey), class: 'button' %>
+  <%= link_to 'Edit', edit_survey_path(@survey), class: 'button' %>
+  <%= link_to 'Back', surveys_path, class: 'button' %>
+  <%= render partial: "surveys/export_form", locals: { survey: @survey } %>
 
-<hr>
+  <hr>
 
-<%= render partial: "surveys/customised_questions_table", locals: { survey: @survey } %>
+  <%= render partial: "surveys/customised_questions_table", locals: { survey: @survey } %>
+</div>
