--- a/app/views/responses/show.html.erb
+++ b/app/views/responses/show.html.erb
@@ -4,12 +4,13 @@
 
 <div class="container--medium content-padding">
   <p>
-    <strong>ip address:</strong>
+    <strong>IP address:</strong>
     <%= @response.ip_address %>
   </p>
 
-  <strong>language:</strong>
-  <%= @response.language %>
+  <p class="full-response__question-wrapper">
+    <strong>Language:</strong>
+    <%= @response.language %>
   </p>
 
   <ul class="ul-unstyled">
